--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,10 @@ jobs:
       run: pip install pyinstaller
 
     - name: Build EXE
-      run: pyinstaller --onefile generateApiDoc.py
+      run: |
+          pyinstaller --onefile --add-data
+          "path\\tp\\api-ms-win-core-path.dll;."
+          generateApiDoc.py
 
     - name: Upload artifact
       uses: actions/upload-artifact@v2
